Added routing graph class

--- a/res/xml/preference.xml
+++ b/res/xml/preference.xml
@@ -71,6 +71,10 @@
         <RingtonePreference android:title="Arrived at source" android:showSilent="true" android:showDefault="true" android:ringtoneType="notification" android:key="@string/foundSrcPrefKey" android:selectable="true" android:enabled="true"/>
         <RingtonePreference android:selectable="true" android:title="Arrived at destination" android:enabled="true" android:showSilent="true" android:showDefault="true" android:ringtoneType="notification" android:key="@string/foundDestPrefKey"/>
     </PreferenceCategory>
+    <PreferenceCategory android:title="Help" android:key="pref_key_help">
+        <Preference android:summary="Learn to use Artemis Messenger." android:key="@string/helpTopicsKey" android:title="Show help topics" android:selectable="true" android:enabled="true"/>
+        <CheckBoxPreference android:title="@string/helpStartupTitle" android:selectable="true" android:key="@string/helpStartupKey" android:enabled="true"/>
+    </PreferenceCategory>
     
 
 </PreferenceScreen>
