--- a/res/layout/activity_list.xml
+++ b/res/layout/activity_list.xml
@@ -27,11 +27,12 @@
         android:src="@android:drawable/ic_menu_share" />
 
     <ImageButton
-        android:id="@+id/settingsButton"
+        android:id="@+id/helpButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:contentDescription="@string/title_activity_settings"
-        android:src="@android:drawable/ic_menu_preferences" />
+        android:layout_weight="1"
+        android:contentDescription="@string/helpButton"
+        android:src="@android:drawable/ic_menu_help" />
 
 </LinearLayout>
 
@@ -45,6 +46,13 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1" />
+
+    <ImageButton
+        android:id="@+id/settingsButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:contentDescription="@string/title_activity_settings"
+        android:src="@android:drawable/ic_menu_preferences" />
 
 </LinearLayout>
 
@@ -73,6 +81,13 @@
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:text="@string/showStations" />
+
+    <Button
+        android:id="@+id/routeViewButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:text="@string/showRoute" />
 
 </LinearLayout>
 
@@ -211,7 +226,6 @@
             android:gravity="center_horizontal"
             android:text="@string/ordnanceHeader"
             android:textAppearance="?android:attr/textAppearanceMedium" />
-
     </TableRow>
 
     <ScrollView
@@ -224,10 +238,54 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical" >
+        </LinearLayout>
+    </ScrollView>
+</TableLayout>
+
+<TableLayout
+    android:id="@+id/routeView"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content" >
+
+    <TableRow
+        android:id="@+id/routeHeaderRow"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" >
+
+        <TextView
+            android:id="@+id/routeDestHeader"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="5"
+            android:gravity="center_horizontal"
+            android:text="@string/destHeader"
+            android:textAppearance="?android:attr/textAppearanceMedium" />
+
+        <TextView
+            android:id="@+id/distanceHeader"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="5"
+            android:gravity="center_horizontal"
+            android:text="@string/distanceHeader"
+            android:textAppearance="?android:attr/textAppearanceMedium" />
+
+    </TableRow>
+
+    <ScrollView
+        android:id="@+id/routeScrollView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" >
+
+        <LinearLayout
+            android:id="@+id/routeTableRows"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical" >
 
         </LinearLayout>
     </ScrollView>
-    
+
 </TableLayout>
 
 </LinearLayout>
