--- a/res/layout/activity_list.xml
+++ b/res/layout/activity_list.xml
@@ -40,6 +40,13 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content" >
 
+    <TextView
+        android:id="@+id/shipText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:textAppearance="?android:attr/textAppearanceLarge" />
+
     <Spinner
         android:id="@+id/shipSpinner"
         android:layout_width="0dp"
@@ -273,7 +280,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="5"
             android:gravity="center_horizontal"
-            android:text="@string/distanceHeader"
+            android:text="@string/directionHeader"
             android:textAppearance="?android:attr/textAppearanceMedium" />
 
     </TableRow>
