--- a/res/layout/activity_routing_page.xml
+++ b/res/layout/activity_routing_page.xml
@@ -30,6 +30,52 @@
             android:layout_height="wrap_content"
             android:orientation="vertical" >
 
+            <TextView
+                android:id="@+id/routingPar1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/routingParagraph1" />
+
+            <LinearLayout
+                android:id="@+id/routingImageFrame"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" >
+
+                <ImageView
+                    android:id="@+id/routingImage"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:layout_marginTop="@dimen/activity_vertical_margin"
+                    android:adjustViewBounds="true"
+                    android:contentDescription="@string/showRoute"
+                    android:scaleType="fitCenter"
+                    android:src="@drawable/routing_view" />
+
+            </LinearLayout>
+
+            <TextView
+                android:id="@+id/routingHeader2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/activity_vertical_margin"
+                android:text="@string/alliesHeader"
+                android:textAppearance="?android:attr/textAppearanceMedium" />
+
+            <TextView
+                android:id="@+id/routingPar2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/activity_vertical_margin"
+                android:text="@string/routingParagraph2" />
+
+            <TextView
+                android:id="@+id/routingPar3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/activity_vertical_margin"
+                android:text="@string/routingParagraph3" />
+
         <Button android:id="@+id/routingBack" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/backButton" /></LinearLayout>
     </ScrollView>
 
