--- a/res/layout/activity_basics_page.xml
+++ b/res/layout/activity_basics_page.xml
@@ -57,6 +57,24 @@
                 android:layout_marginTop="@dimen/activity_vertical_margin"
                 android:text="@string/basicsParagraph3" />
 
+            <LinearLayout
+                android:id="@+id/addressImageFrame"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" >
+                
+                <ImageView
+                    android:id="@+id/addressBarImage"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/activity_vertical_margin"
+                    android:layout_weight="1"
+                    android:adjustViewBounds="true"
+                    android:contentDescription="@string/addressLabel"
+                    android:scaleType="fitCenter"
+                    android:src="@drawable/address_bar" />
+
+            </LinearLayout>
+
             <TextView
                 android:id="@+id/basicsPar4"
                 android:layout_width="wrap_content"
