Artemis Messenger 4.1.0: bug fixes, Stations table updates

--- a/res/layout/activity_stations_page.xml
+++ b/res/layout/activity_stations_page.xml
@@ -83,6 +83,13 @@
                 android:layout_marginTop="@dimen/activity_vertical_margin"
                 android:text="@string/stationsParagraph4" />
 
+            <TextView
+                android:id="@+id/stationsPar5"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/activity_vertical_margin"
+                android:text="@string/stationsParagraph5" />
+
         <Button android:id="@+id/stationsBack" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/backButton" /></LinearLayout>
     </ScrollView>
 
