--- a/res/xml/preference.xml
+++ b/res/xml/preference.xml
@@ -56,7 +56,9 @@
             android:title="Show All"
             android:enabled="true"/>
     </PreferenceCategory>
-    <PreferenceCategory
+    <PreferenceCategory android:key="pref_key_routing" android:summary="Include ally ships that:" android:title="Routing"><CheckBoxPreference android:title="Have energy" android:key="@string/energyKey" android:selectable="true" android:enabled="true" android:defaultValue="false" /><CheckBoxPreference android:selectable="true" android:defaultValue="false" android:enabled="true" android:key="@string/needEnergyKey" android:title="Need energy" /><CheckBoxPreference android:selectable="true" android:defaultValue="false" android:title="Need DamCon teams" android:enabled="true" android:key="@string/needDamConKey" /><CheckBoxPreference android:selectable="true" android:defaultValue="false" android:title="Are malfunctioning" android:enabled="true" android:key="@string/malfunctionKey" /><CheckBoxPreference android:selectable="true" android:defaultValue="false" android:title="Are hostages" android:enabled="true" android:key="@string/hostageKey" />
+    <CheckBoxPreference android:title="Are commandeered" android:key="@string/commandeeredKey"/>
+</PreferenceCategory><PreferenceCategory
         android:key="pref_key_notifications"
         android:title="Notifications">
         
@@ -76,6 +78,7 @@
         
         <CheckBoxPreference android:title="@string/helpStartupTitle" android:key="@string/helpStartupKey"/>
     </PreferenceCategory>
+    
     
 
 </PreferenceScreen>
