--- a/res/layout/activity_routing_page.xml
+++ b/res/layout/activity_routing_page.xml
@@ -76,6 +76,13 @@
             android:layout_marginTop="@dimen/activity_vertical_margin"
                 android:text="@string/routingParagraph3" />
 
+            <TextView
+                android:id="@+id/routingPar4"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/activity_vertical_margin"
+                android:text="@string/routingParagraph4" />
+
         <Button android:id="@+id/routingBack" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/backButton" /></LinearLayout>
     </ScrollView>
 
