--- a/res/layout/server_list_entry.xml
+++ b/res/layout/server_list_entry.xml
@@ -8,12 +8,14 @@
         android:id="@+id/serverNameField"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textColor="@android:color/white"
         android:textAppearance="?android:attr/textAppearanceLarge" />
 
     <TextView
         android:id="@+id/serverAddressField"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textColor="@android:color/secondary_text_dark"
         android:textAppearance="?android:attr/textAppearanceSmall" />
 
 </LinearLayout>
