Artemis Messenger 5.1.1: Text colour fix, mission-to-ship assignment

--- a/res/xml/preference.xml
+++ b/res/xml/preference.xml
@@ -50,7 +50,7 @@
             android:key="@string/connectStartupKey"
             android:selectable="true"
             android:enabled="true"
-            android:defaultValue="true"
+            android:defaultValue="false"
             android:dependency="@string/allowUDPKey" />
     
     <EditTextPreference
