--- a/res/layout/activity_connect.xml
+++ b/res/layout/activity_connect.xml
@@ -44,4 +44,24 @@
         android:layout_height="wrap_content" >
     </ListView>
 
+    <LinearLayout
+        android:id="@+id/recentHeaderBar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" >
+
+        <TextView
+            android:id="@+id/recentHeader"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/recentHosts"
+            android:textAppearance="?android:attr/textAppearanceLarge" />
+
+    </LinearLayout>
+
+    <ListView
+        android:id="@+id/recentList"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" >
+    </ListView>
+
 </LinearLayout>
